# fact-checker

apps/fact-checker/: pyproject.toml
apps/fact-checker/claim_filter/: README.md  __init__.py  agent.py  schemas.py
apps/fact-checker/claim_filter/config/: __init__.py
apps/fact-checker/claim_filter/llm/: config.py  models.py
apps/fact-checker/claim_filter/nodes/: __init__.py  classify_claim.py
apps/fact-checker/scripts/: filter_claims.py
